// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`genAuthFromKeyrack given: [case3] keyrack stays locked even after auto-unlock when: [t0] unlock does not clear the lock then: throws MalfunctionError with keyrack output 1`] = `
"💥 MalfunctionError: keyrack:
🔒 locked: credential is locked

{
  "status": "locked",
  "owner": "ehmpath",
  "env": "prep",
  "key": "EHMPATH_BEAVER_GITHUB_TOKEN"
}"
`;

exports[`genAuthFromKeyrack given: [case4] keyrack returns absent status when: [t0] key was never set then: throws ConstraintError with a two-path nudge 1`] = `
"✋ ConstraintError: key is not set: EHMPATH_BEAVER_GITHUB_TOKEN
  • set the github token: rhx keyrack set --owner ehmpath --key EHMPATH_BEAVER_GITHUB_TOKEN --env prep
  • or re-run as human: --auth as-human

{
  "owner": "ehmpath",
  "env": "prep",
  "key": "EHMPATH_BEAVER_GITHUB_TOKEN"
}"
`;

exports[`genAuthFromKeyrack given: [case5] keyrack returns blocked status when: [t0] value blocked by mechanism firewall then: throws MalfunctionError with keyrack output 1`] = `
"💥 MalfunctionError: keyrack:
🚫 blocked: credential blocked by mechanism firewall

{
  "status": "blocked",
  "owner": "ehmpath",
  "env": "prep",
  "key": "EHMPATH_BEAVER_GITHUB_TOKEN"
}"
`;
